welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (aSmile==false && bSmile==false){
  ^